@@ -11,16 +11,19 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ProjectState;
 import org.elasticsearch.cluster.metadata.ComponentTemplate;
 import org.elasticsearch.cluster.metadata.ComposableIndexTemplate;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.LifecycleExecutionState;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.metadata.Template;
 import org.elasticsearch.cluster.routing.allocation.DataTier;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.core.NotMultiProjectCapable;
 import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.license.XPackLicenseState;
@@ -43,7 +46,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.SortedMap;
 import java.util.TreeMap;
 
@@ -177,7 +179,7 @@ public final class MetadataMigrateToDataTiersRoutingService {
      * ILM routing allocations. It also returns a summary of the affected abstractions encapsulated in {@link MigratedEntities}
      */
     public static Tuple<ClusterState, MigratedEntities> migrateToDataTiersRouting(
-        ClusterState currentState,
+        ProjectState currentState,
         @Nullable String nodeAttrName,
         @Nullable String indexTemplateToDelete,
         NamedXContentRegistry xContentRegistry,
@@ -185,16 +187,20 @@ public final class MetadataMigrateToDataTiersRoutingService {
         XPackLicenseState licenseState,
         boolean dryRun
     ) {
+        ProjectMetadata currentProjectMetadata = currentState.metadata();
         if (dryRun == false) {
-            IndexLifecycleMetadata currentMetadata = currentState.metadata().custom(IndexLifecycleMetadata.TYPE);
-            if (currentMetadata != null && currentILMMode(currentState) != STOPPED) {
+            IndexLifecycleMetadata currentMetadata = currentProjectMetadata.custom(IndexLifecycleMetadata.TYPE);
+            if (currentMetadata != null && currentILMMode(currentProjectMetadata) != STOPPED) {
                 throw new IllegalStateException(
-                    "stop ILM before migrating to data tiers, current state is [" + currentILMMode(currentState) + "]"
+                    "stop ILM before migrating to data tiers, current state is [" + currentILMMode(currentProjectMetadata) + "]"
                 );
             }
         }
 
-        Metadata.Builder mb = Metadata.builder(currentState.metadata());
+        @NotMultiProjectCapable // We're doing something fishy here by updating the Metadata even though we're inside the scope of a single
+        // project. This is generally not correct, but since ILM is not properly project-aware, we're making an exception here.
+        Metadata.Builder mb = Metadata.builder(currentState.cluster().metadata());
+        ProjectMetadata.Builder newProjectMetadataBuilder = ProjectMetadata.builder(currentProjectMetadata);
 
         // remove ENFORCE_DEFAULT_TIER_PREFERENCE from the persistent settings
         Settings.Builder persistentSettingsBuilder = Settings.builder().put(mb.persistentSettings());
@@ -208,8 +214,8 @@ public final class MetadataMigrateToDataTiersRoutingService {
 
         String removedIndexTemplateName = null;
         if (Strings.hasText(indexTemplateToDelete)) {
-            if (currentState.metadata().getTemplates().containsKey(indexTemplateToDelete)) {
-                mb.removeTemplate(indexTemplateToDelete);
+            if (currentProjectMetadata.templates().containsKey(indexTemplateToDelete)) {
+                newProjectMetadataBuilder.removeTemplate(indexTemplateToDelete);
                 logger.debug("removing legacy template [{}]", indexTemplateToDelete);
                 removedIndexTemplateName = indexTemplateToDelete;
             } else {
@@ -221,16 +227,27 @@ public final class MetadataMigrateToDataTiersRoutingService {
         if (Strings.isNullOrEmpty(nodeAttrName)) {
             attribute = DEFAULT_NODE_ATTRIBUTE_NAME;
         }
-        List<String> migratedPolicies = migrateIlmPolicies(mb, currentState, attribute, xContentRegistry, client, licenseState);
-        // Creating an intermediary cluster state view as when migrating policy we also update the cached phase definition stored in the
-        // index metadata so the metadata.builder will probably contain an already updated view over the indices metadata which we don't
-        // want to lose when migrating the indices settings
-        ClusterState intermediateState = ClusterState.builder(currentState).metadata(mb).build();
-        mb = Metadata.builder(intermediateState.metadata());
-        List<String> migratedIndices = migrateIndices(mb, intermediateState, attribute);
-        MigratedTemplates migratedTemplates = migrateIndexAndComponentTemplates(mb, intermediateState, attribute);
+        List<String> migratedPolicies = migrateIlmPolicies(
+            newProjectMetadataBuilder,
+            currentProjectMetadata,
+            attribute,
+            xContentRegistry,
+            client,
+            licenseState
+        );
+        // Creating an intermediary project metadata as when migrating policy we also update the cached phase definition stored in the
+        // index metadata so the ProjectMetadata.Builder will probably contain an already updated view over the indices metadata which we
+        // don't want to lose when migrating the index settings
+        ProjectMetadata intermediateProjectMetadata = newProjectMetadataBuilder.build();
+        newProjectMetadataBuilder = ProjectMetadata.builder(intermediateProjectMetadata);
+        List<String> migratedIndices = migrateIndices(newProjectMetadataBuilder, intermediateProjectMetadata, attribute);
+        MigratedTemplates migratedTemplates = migrateIndexAndComponentTemplates(
+            newProjectMetadataBuilder,
+            intermediateProjectMetadata,
+            attribute
+        );
         return Tuple.tuple(
-            ClusterState.builder(currentState).metadata(mb).build(),
+            ClusterState.builder(currentState.cluster()).metadata(mb).putProjectMetadata(newProjectMetadataBuilder).build(),
             new MigratedEntities(removedIndexTemplateName, migratedIndices, migratedPolicies, migratedTemplates)
         );
     }
@@ -243,16 +260,16 @@ public final class MetadataMigrateToDataTiersRoutingService {
      * for each of these managed indices.
      */
     static List<String> migrateIlmPolicies(
-        Metadata.Builder mb,
-        ClusterState currentState,
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
         String nodeAttrName,
         NamedXContentRegistry xContentRegistry,
         Client client,
         XPackLicenseState licenseState
     ) {
-        IndexLifecycleMetadata currentLifecycleMetadata = currentState.metadata().custom(IndexLifecycleMetadata.TYPE);
+        IndexLifecycleMetadata currentLifecycleMetadata = projectMetadata.custom(IndexLifecycleMetadata.TYPE);
         if (currentLifecycleMetadata == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         List<String> migratedPolicies = new ArrayList<>();
@@ -273,14 +290,22 @@ public final class MetadataMigrateToDataTiersRoutingService {
                 assert oldPolicyMetadata != null
                     : "we must only update policies, not create new ones, but " + policyMetadataEntry.getKey() + " didn't exist";
 
-                refreshCachedPhases(mb, currentState, oldPolicyMetadata, newPolicyMetadata, xContentRegistry, client, licenseState);
+                refreshCachedPhases(
+                    projectMetadataBuilder,
+                    projectMetadata,
+                    oldPolicyMetadata,
+                    newPolicyMetadata,
+                    xContentRegistry,
+                    client,
+                    licenseState
+                );
                 migratedPolicies.add(policyMetadataEntry.getKey());
             }
         }
 
         if (migratedPolicies.size() > 0) {
-            IndexLifecycleMetadata newMetadata = new IndexLifecycleMetadata(newPolicies, currentILMMode(currentState));
-            mb.putCustom(IndexLifecycleMetadata.TYPE, newMetadata);
+            IndexLifecycleMetadata newMetadata = new IndexLifecycleMetadata(newPolicies, currentILMMode(projectMetadata));
+            projectMetadataBuilder.putCustom(IndexLifecycleMetadata.TYPE, newMetadata);
         }
         return migratedPolicies;
     }
@@ -289,8 +314,8 @@ public final class MetadataMigrateToDataTiersRoutingService {
      * Refreshed the cached ILM phase definition for the indices managed by the migrated policy.
      */
     static void refreshCachedPhases(
-        Metadata.Builder mb,
-        ClusterState currentState,
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
         LifecyclePolicyMetadata oldPolicyMetadata,
         LifecyclePolicyMetadata newPolicyMetadata,
         NamedXContentRegistry xContentRegistry,
@@ -299,7 +324,15 @@ public final class MetadataMigrateToDataTiersRoutingService {
     ) {
         // this performs a walk through the managed indices and safely updates the cached phase (ie. for the phases we did not
         // remove the allocate action)
-        updateIndicesForPolicy(mb, currentState, xContentRegistry, client, oldPolicyMetadata.getPolicy(), newPolicyMetadata, licenseState);
+        updateIndicesForPolicy(
+            projectMetadataBuilder,
+            projectMetadata,
+            xContentRegistry,
+            client,
+            oldPolicyMetadata.getPolicy(),
+            newPolicyMetadata,
+            licenseState
+        );
 
         LifecyclePolicy newLifecyclePolicy = newPolicyMetadata.getPolicy();
         List<String> migratedPhasesWithoutAllocateAction = getMigratedPhasesWithoutAllocateAction(
@@ -318,8 +351,8 @@ public final class MetadataMigrateToDataTiersRoutingService {
             // not the same as in the cached phase) so let's forcefully (and still safely :) ) refresh the cached phase for the managed
             // indices in these phases.
             refreshCachedPhaseForPhasesWithoutAllocateAction(
-                mb,
-                currentState,
+                projectMetadataBuilder,
+                projectMetadata,
                 oldPolicyMetadata.getPolicy(),
                 newPolicyMetadata,
                 migratedPhasesWithoutAllocateAction,
@@ -338,8 +371,8 @@ public final class MetadataMigrateToDataTiersRoutingService {
      * 2) if the index is anywhere else in the phase, we simply update the cached phase definition to reflect the migrated phase
      */
     private static void refreshCachedPhaseForPhasesWithoutAllocateAction(
-        Metadata.Builder mb,
-        ClusterState currentState,
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
         LifecyclePolicy oldPolicy,
         LifecyclePolicyMetadata newPolicyMetadata,
         List<String> phasesWithoutAllocateAction,
@@ -347,8 +380,7 @@ public final class MetadataMigrateToDataTiersRoutingService {
         XPackLicenseState licenseState
     ) {
         String policyName = oldPolicy.getName();
-        final List<IndexMetadata> managedIndices = currentState.metadata()
-            .indices()
+        final List<IndexMetadata> managedIndices = projectMetadata.indices()
             .values()
             .stream()
             .filter(meta -> policyName.equals(meta.getLifecyclePolicyName()))
@@ -375,7 +407,9 @@ public final class MetadataMigrateToDataTiersRoutingService {
                             licenseState
                         );
                         if (currentExState.equals(newLifecycleState) == false) {
-                            mb.put(IndexMetadata.builder(indexMetadata).putCustom(ILM_CUSTOM_METADATA_KEY, newLifecycleState.asMap()));
+                            projectMetadataBuilder.put(
+                                IndexMetadata.builder(indexMetadata).putCustom(ILM_CUSTOM_METADATA_KEY, newLifecycleState.asMap())
+                            );
                         }
                     } else {
                         // if the index is not in the allocate action, we're going to perform a cached phase update (which is "unsafe" by
@@ -400,7 +434,9 @@ public final class MetadataMigrateToDataTiersRoutingService {
                             policyName,
                             newPhaseDefinition
                         );
-                        mb.put(IndexMetadata.builder(indexMetadata).putCustom(ILM_CUSTOM_METADATA_KEY, updatedState.build().asMap()));
+                        projectMetadataBuilder.put(
+                            IndexMetadata.builder(indexMetadata).putCustom(ILM_CUSTOM_METADATA_KEY, updatedState.build().asMap())
+                        );
                     }
                 }
             }
@@ -510,12 +546,16 @@ public final class MetadataMigrateToDataTiersRoutingService {
      * attribute name towards the tier preference routing.
      * Returns a list of the migrated indices.
      */
-    static List<String> migrateIndices(Metadata.Builder mb, ClusterState currentState, String nodeAttrName) {
+    static List<String> migrateIndices(
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
+        String nodeAttrName
+    ) {
         List<String> migratedIndices = new ArrayList<>();
         String nodeAttrIndexRequireRoutingSetting = INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + nodeAttrName;
         String nodeAttrIndexIncludeRoutingSetting = INDEX_ROUTING_INCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
         String nodeAttrIndexExcludeRoutingSetting = INDEX_ROUTING_EXCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
-        for (var indexMetadata : currentState.metadata().indices().values()) {
+        for (var indexMetadata : projectMetadata.indices().values()) {
             String indexName = indexMetadata.getIndex().getName();
             Settings currentSettings = indexMetadata.getSettings();
 
@@ -535,7 +575,7 @@ public final class MetadataMigrateToDataTiersRoutingService {
                 removeNodeAttrIndexRoutingSettings = false;
                 // migrating based on the `include` setting was not successful,
                 // so, last stop, we just inject a tier preference regardless of anything else
-                newSettings = migrateToDefaultTierPreference(currentState, indexMetadata);
+                newSettings = migrateToDefaultTierPreference(projectMetadata, indexMetadata);
             }
 
             if (newSettings.equals(currentSettings) == false) {
@@ -561,7 +601,7 @@ public final class MetadataMigrateToDataTiersRoutingService {
                     }
                 }
 
-                mb.put(
+                projectMetadataBuilder.put(
                     IndexMetadata.builder(indexMetadata).settings(finalSettings).settingsVersion(indexMetadata.getSettingsVersion() + 1)
                 );
                 migratedIndices.add(indexMetadata.getIndex().getName());
@@ -644,21 +684,29 @@ public final class MetadataMigrateToDataTiersRoutingService {
         return newSettingsBuilder.build();
     }
 
-    static MigratedTemplates migrateIndexAndComponentTemplates(Metadata.Builder mb, ClusterState clusterState, String nodeAttrName) {
-        List<String> migratedLegacyTemplates = migrateLegacyTemplates(mb, clusterState, nodeAttrName);
-        List<String> migratedComposableTemplates = migrateComposableTemplates(mb, clusterState, nodeAttrName);
-        List<String> migratedComponentTemplates = migrateComponentTemplates(mb, clusterState, nodeAttrName);
+    static MigratedTemplates migrateIndexAndComponentTemplates(
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
+        String nodeAttrName
+    ) {
+        List<String> migratedLegacyTemplates = migrateLegacyTemplates(projectMetadataBuilder, projectMetadata, nodeAttrName);
+        List<String> migratedComposableTemplates = migrateComposableTemplates(projectMetadataBuilder, projectMetadata, nodeAttrName);
+        List<String> migratedComponentTemplates = migrateComponentTemplates(projectMetadataBuilder, projectMetadata, nodeAttrName);
         return new MigratedTemplates(migratedLegacyTemplates, migratedComposableTemplates, migratedComponentTemplates);
     }
 
-    static List<String> migrateLegacyTemplates(Metadata.Builder mb, ClusterState clusterState, String nodeAttrName) {
+    static List<String> migrateLegacyTemplates(
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
+        String nodeAttrName
+    ) {
         String requireRoutingSetting = INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + nodeAttrName;
         String includeRoutingSetting = INDEX_ROUTING_INCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
         String excludeRoutingSetting = INDEX_ROUTING_EXCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
 
         List<String> migratedLegacyTemplates = new ArrayList<>();
 
-        for (var template : clusterState.metadata().templates().entrySet()) {
+        for (var template : projectMetadata.templates().entrySet()) {
             IndexTemplateMetadata templateMetadata = template.getValue();
             if (templateMetadata.settings().keySet().contains(requireRoutingSetting)
                 || templateMetadata.settings().keySet().contains(includeRoutingSetting)) {
@@ -669,21 +717,25 @@ public final class MetadataMigrateToDataTiersRoutingService {
                 settingsBuilder.remove(excludeRoutingSetting);
                 templateMetadataBuilder.settings(settingsBuilder);
 
-                mb.put(templateMetadataBuilder);
+                projectMetadataBuilder.put(templateMetadataBuilder);
                 migratedLegacyTemplates.add(template.getKey());
             }
         }
         return migratedLegacyTemplates;
     }
 
-    static List<String> migrateComposableTemplates(Metadata.Builder mb, ClusterState clusterState, String nodeAttrName) {
+    static List<String> migrateComposableTemplates(
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
+        String nodeAttrName
+    ) {
         String requireRoutingSetting = INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + nodeAttrName;
         String includeRoutingSetting = INDEX_ROUTING_INCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
         String excludeRoutingSetting = INDEX_ROUTING_EXCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
 
         List<String> migratedComposableTemplates = new ArrayList<>();
 
-        for (Map.Entry<String, ComposableIndexTemplate> templateEntry : clusterState.metadata().templatesV2().entrySet()) {
+        for (Map.Entry<String, ComposableIndexTemplate> templateEntry : projectMetadata.templatesV2().entrySet()) {
             ComposableIndexTemplate composableTemplate = templateEntry.getValue();
             if (composableTemplate.template() != null && composableTemplate.template().settings() != null) {
                 Settings settings = composableTemplate.template().settings();
@@ -708,8 +760,10 @@ public final class MetadataMigrateToDataTiersRoutingService {
                     migratedComposableTemplateBuilder.ignoreMissingComponentTemplates(
                         composableTemplate.getIgnoreMissingComponentTemplates()
                     );
+                    migratedComposableTemplateBuilder.createdDate(composableTemplate.createdDateMillis().orElse(null));
+                    migratedComposableTemplateBuilder.modifiedDate(composableTemplate.modifiedDateMillis().orElse(null));
 
-                    mb.put(templateEntry.getKey(), migratedComposableTemplateBuilder.build());
+                    projectMetadataBuilder.put(templateEntry.getKey(), migratedComposableTemplateBuilder.build());
                     migratedComposableTemplates.add(templateEntry.getKey());
                 }
             }
@@ -718,14 +772,18 @@ public final class MetadataMigrateToDataTiersRoutingService {
         return migratedComposableTemplates;
     }
 
-    static List<String> migrateComponentTemplates(Metadata.Builder mb, ClusterState clusterState, String nodeAttrName) {
+    static List<String> migrateComponentTemplates(
+        ProjectMetadata.Builder projectMetadataBuilder,
+        ProjectMetadata projectMetadata,
+        String nodeAttrName
+    ) {
         String requireRoutingSetting = INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + nodeAttrName;
         String includeRoutingSetting = INDEX_ROUTING_INCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
         String excludeRoutingSetting = INDEX_ROUTING_EXCLUDE_GROUP_SETTING.getKey() + nodeAttrName;
 
         List<String> migratedComponentTemplates = new ArrayList<>();
 
-        for (Map.Entry<String, ComponentTemplate> componentEntry : clusterState.metadata().componentTemplates().entrySet()) {
+        for (Map.Entry<String, ComponentTemplate> componentEntry : projectMetadata.componentTemplates().entrySet()) {
             ComponentTemplate componentTemplate = componentEntry.getValue();
             if (componentTemplate.template() != null && componentTemplate.template().settings() != null) {
                 Settings settings = componentTemplate.template().settings();
@@ -742,10 +800,12 @@ public final class MetadataMigrateToDataTiersRoutingService {
                         migratedInnerTemplate,
                         componentTemplate.version(),
                         componentTemplate.metadata(),
-                        componentTemplate.deprecated()
+                        componentTemplate.deprecated(),
+                        componentTemplate.createdDateMillis().orElse(null),
+                        componentTemplate.modifiedDateMillis().orElse(null)
                     );
 
-                    mb.put(componentEntry.getKey(), migratedComponentTemplate);
+                    projectMetadataBuilder.put(componentEntry.getKey(), migratedComponentTemplate);
                     migratedComponentTemplates.add(componentEntry.getKey());
                 }
             }
@@ -754,7 +814,7 @@ public final class MetadataMigrateToDataTiersRoutingService {
         return migratedComponentTemplates;
     }
 
-    private static Settings migrateToDefaultTierPreference(ClusterState currentState, IndexMetadata indexMetadata) {
+    private static Settings migrateToDefaultTierPreference(ProjectMetadata projectMetadata, IndexMetadata indexMetadata) {
         Settings currentIndexSettings = indexMetadata.getSettings();
         List<String> tierPreference = DataTier.parseTierList(DataTier.TIER_PREFERENCE_SETTING.get(currentIndexSettings));
         if (tierPreference.isEmpty() == false) {
@@ -764,7 +824,7 @@ public final class MetadataMigrateToDataTiersRoutingService {
         Settings.Builder newSettingsBuilder = Settings.builder().put(currentIndexSettings);
         String indexName = indexMetadata.getIndex().getName();
 
-        boolean isDataStream = currentState.metadata().findDataStreams(indexName).isEmpty() == false;
+        boolean isDataStream = projectMetadata.findDataStreams(indexName).isEmpty() == false;
         String convertedTierPreference = isDataStream ? DataTier.DATA_HOT : DataTier.DATA_CONTENT;
         if (SearchableSnapshotsSettings.isSearchableSnapshotStore(indexMetadata.getSettings())) {
             if (SearchableSnapshotsSettings.isPartialSearchableSnapshotIndex(indexMetadata.getSettings())) {
@@ -811,13 +871,12 @@ public final class MetadataMigrateToDataTiersRoutingService {
      * Represents the elasticsearch abstractions that were, in some way, migrated such that the system is managing indices lifecycles and
      * allocations using data tiers.
      */
-    public static final class MigratedEntities {
-        @Nullable
-        public final String removedIndexTemplateName;
-        public final List<String> migratedIndices;
-        public final List<String> migratedPolicies;
-        public final MigratedTemplates migratedTemplates;
-
+    public record MigratedEntities(
+        @Nullable String removedIndexTemplateName,
+        List<String> migratedIndices,
+        List<String> migratedPolicies,
+        MigratedTemplates migratedTemplates
+    ) {
         public MigratedEntities(
             @Nullable String removedIndexTemplateName,
             List<String> migratedIndices,
@@ -829,37 +888,17 @@ public final class MetadataMigrateToDataTiersRoutingService {
             this.migratedPolicies = Collections.unmodifiableList(migratedPolicies);
             this.migratedTemplates = migratedTemplates;
         }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o == null || getClass() != o.getClass()) {
-                return false;
-            }
-            MigratedEntities that = (MigratedEntities) o;
-            return Objects.equals(removedIndexTemplateName, that.removedIndexTemplateName)
-                && Objects.equals(migratedIndices, that.migratedIndices)
-                && Objects.equals(migratedPolicies, that.migratedPolicies)
-                && Objects.equals(migratedTemplates, that.migratedTemplates);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(removedIndexTemplateName, migratedIndices, migratedPolicies, migratedTemplates);
-        }
     }
 
     /**
      * Represents the legacy, composable, and component templates that were migrated away from shard allocation settings based on custom
      * node attributes.
      */
-    public static final class MigratedTemplates {
-        public final List<String> migratedLegacyTemplates;
-        public final List<String> migratedComposableTemplates;
-        public final List<String> migratedComponentTemplates;
-
+    public record MigratedTemplates(
+        List<String> migratedLegacyTemplates,
+        List<String> migratedComposableTemplates,
+        List<String> migratedComponentTemplates
+    ) {
         public MigratedTemplates(
             List<String> migratedLegacyTemplates,
             List<String> migratedComposableTemplates,
@@ -868,25 +907,6 @@ public final class MetadataMigrateToDataTiersRoutingService {
             this.migratedLegacyTemplates = Collections.unmodifiableList(migratedLegacyTemplates);
             this.migratedComposableTemplates = Collections.unmodifiableList(migratedComposableTemplates);
             this.migratedComponentTemplates = Collections.unmodifiableList(migratedComponentTemplates);
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) {
-                return true;
-            }
-            if (o == null || getClass() != o.getClass()) {
-                return false;
-            }
-            MigratedTemplates that = (MigratedTemplates) o;
-            return Objects.equals(migratedLegacyTemplates, that.migratedLegacyTemplates)
-                && Objects.equals(migratedComposableTemplates, that.migratedComposableTemplates)
-                && Objects.equals(migratedComponentTemplates, that.migratedComponentTemplates);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(migratedLegacyTemplates, migratedComposableTemplates, migratedComponentTemplates);
         }
     }
 }
